--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,4 @@ version = "0.1.0"
 authors = ["general electrix <general.electrix@gmail.com>"]
 
 [dependencies]
-libc = "*"
-log = "*"
+serial = "*"
