REF: move enttec into a submodule

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-enttec"
+name = "rust-dmx"
 version = "0.1.0"
 authors = ["general electrix <general.electrix@gmail.com>"]
 
