--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 name = "rust_dmx"
 version = "0.1.0"
 authors = ["general electrix <general.electrix@gmail.com>"]
+edition = "2018"
 
 [dependencies]
-serial = "*"
-serde = "*"
-serde_derive = "*"
-regex = "*"
-lazy_static = "*"
+serial = "^0.4"
+serde = { version = "1", features = ["derive"] }
+regex = "1"
+lazy_static = "1"
