Revamp the whole package. (#1)
* Update dependencies and specify actual versions.
* Bump to 2018 edition and clean up.
* Collapse the port and port provider traits into a single trait.
* Replace the string-based namespace/name constructor system with anonymous constructor functions returned by available_ports.
* Move to a construct-then-open approach to allow ports to try to re-open after deserialization.
* Implement serialize/deserialize directly on the ports.
* Use typetag to support serializing `dyn DmxPort`.
* Re-use a single output buffer to eliminate an allocation from each enttec write cycle.
* Move the offline port into a separate module.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "rust_dmx"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["general electrix <general.electrix@gmail.com>"]
+edition = "2018"
 
 [dependencies]
-serial = "*"
-serde = "*"
-serde_derive = "*"
-regex = "*"
-lazy_static = "*"
+serial = "^0.4"
+serde = { version = "1", features = ["derive"] }
+regex = "1"
+lazy_static = "1"
+derive_more = "^0.99"
+typetag = "0.1"
