--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,8 @@ description = "Control of DMX-512 lighting control hardware."
 [dependencies]
 serialport = "4"
 serde = { version = "1", features = ["derive"] }
-derive_more = "^0.99"
-typetag = "0.1"
+derive_more = "0.99"
+typetag = "0.2"
+thiserror = "1.0.49"
+anyhow = "1.0.75"
+log = "0.4.20"
