--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.5.0"
 authors = ["general electrix <general.electrix@gmail.com>"]
 edition = "2021"
 license = "MIT"
-keywords = ["DMX", "lighting", "enttec"]
+keywords = ["DMX", "lighting", "enttec", "artnet"]
 categories = ["hardware-support", "multimedia"]
 repository = "https://github.com/generalelectrix/rust-dmx"
 description = "Control of DMX-512 lighting control hardware."
@@ -16,3 +16,4 @@ typetag = "0.2"
 thiserror = "1"
 anyhow = "1"
 log = "0.4"
+artnet_protocol = "0.4.3"
